# sudoku-solver

./: .gitignore  pyproject.toml  run.py
sudoku_solver/: __init__.py  board.py  controller.py  reader.py
